# cpp_qt6-gui

./: CMakeLists.txt  README.MD
include/cpp_qt-gui/: utils.h
src/: main.cpp  utils.cpp
